logs/python-testdata.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fake_factory-0.2.egg-info'...
Listing './lib/python3.5/site-packages/faker'...
Compiling './lib/python3.5/site-packages/faker/__main__.py'...
***   File "./lib/python3.5/site-packages/faker/__main__.py", line 13
    print fake.format(provider_or_field, *args)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/faker/providers'...
Listing './lib/python3.5/site-packages/faker/providers/en_US'...
Listing './lib/python3.5/site-packages/faker/providers/fr_FR'...
Listing './lib/python3.5/site-packages/faker/providers/it_IT'...
Listing './lib/python3.5/site-packages/faker/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_testdata-1.0.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/testdata'...
Listing './lib/python3.5/site-packages/testdata/extra'...
Compiling './lib/python3.5/site-packages/testdata/extra/mongodb.py'...
***   File "./lib/python3.5/site-packages/testdata/extra/mongodb.py", line 3
    except ImportError, import_err:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/testdata/factories'...
Listing './share'...
Listing './share/python-wheels'...
